--- a/table.html
+++ b/table.html
@@ -5,40 +5,61 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.d27389e1.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.e4839273.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/ProgressBar.4f1e9ba5.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.7b49da83.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.8e51f75c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.9780bc81.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.862309ab.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.ca56aa98.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.9fa6f474.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.c0057c3f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/ProgressBar.svelte_svelte_type_style_lang.3990d016.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.358925fc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.84c7aabb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.b93e583a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.e41477d8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.6f0a9f36.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.502b9be9.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.623e6c9b.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.4ad91935.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ProgressBar.svelte_svelte_type_style_lang.494949d3.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.b650c2e3.js"><!-- HEAD_svelte-gewkj4_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialClassState() {
+  const elemHtmlClasses = document.documentElement.classList;
+  const condLocalStorageUserPrefs = localStorage.getItem("modeUserPrefers") === "false";
+  const condLocalStorageUserPrefsExists = !("modeUserPrefers" in localStorage);
+  const condMatchMedia = window.matchMedia("(prefers-color-scheme: dark)").matches;
+  if (condLocalStorageUserPrefs || condLocalStorageUserPrefsExists && condMatchMedia) {
+    elemHtmlClasses.add("dark");
+  } else {
+    elemHtmlClasses.remove("dark");
+  }
+})();</script><!-- HTML_TAG_END --><!-- HEAD_svelte-gewkj4_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="modern">
 		<div style="display: contents" class="h-full overflow-hidden">
 
 
 <div id="appShell" class="w-full h-full flex flex-col overflow-hidden " data-testid="app-shell">
+	<header id="shell-header" class="flex-none z-10"><div class="app-bar flex flex-col bg-surface-100-800-token  space-y-4 p-4  " data-testid="app-bar" role="toolbar" aria-label="" aria-labelledby="">
+	<div class="app-bar-row-main grid items-center grid-cols-3 gap-4 ">
+		<div class="app-bar-slot-lead flex-none flex justify-between items-center "><div></div></div>
+		
+		<div class="app-bar-slot-default flex-auto place-self-center"><h1 class="h2 font-bold underline">Svelte Skeleton</h1></div>
+		
+		<div class="app-bar-slot-trail flex-none flex items-center space-x-4 place-content-end">
+
+<div class="lightswitch-track cursor-pointer transition-all duration-[200ms] w-12 h-6 ring-[1px] ring-surface-500/30 rounded-token bg-surface-900 " role="switch" aria-label="Light Switch" aria-checked="false" title="Toggle Light Mode" tabindex="0">
+	<div class="lightswitch-thumb aspect-square scale-[0.8] flex justify-center items-center transition-all duration-[200ms] h-6 rounded-token bg-surface-50 ">
+		<svg class="lightswitch-icon w-[70%] aspect-square fill-surface-900" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M223.5 32C100 32 0 132.3 0 256S100 480 223.5 480c60.6 0 115.5-24.2 155.8-63.4c5-4.9 6.3-12.5 3.1-18.7s-10.1-9.7-17-8.5c-9.8 1.7-19.8 2.6-30.1 2.6c-96.9 0-175.5-78.8-175.5-176c0-65.8 36-123.1 89.3-153.3c6.1-3.5 9.2-10.5 7.7-17.3s-7.3-11.9-14.3-12.5c-6.3-.5-12.6-.8-19-.8z"></path></svg></div></div>
+  </div></div>
 	
+	</div></header>
 
 	
 	<div class="flex-auto w-full h-full flex overflow-hidden">
 		<aside id="sidebar-left" class="flex-none overflow-x-hidden overflow-y-auto w-auto"><div id="leftsidebar" class="hidden sm:block"><nav class="list-nav"><ul><li><a href="/">Home</a></li>
       
       <li><a href="/table">Table</a></li>
-      </ul></nav></div></aside>
+      <li><a href="/toast">Toast</a></li></ul></nav></div></aside>
 
 		
 		<div id="page" class="relative flex-1 overflow-x-hidden flex flex-col">
 			
 
 			
-			<main id="page-content" class="flex-auto ">
-	
-	<div><div class="table-container ">
+			<main id="page-content" class="flex-auto "><div><div class="table-container ">
 	
 	<table class="table   table-interactive" role="grid">
 		
@@ -123,8 +144,7 @@
 		
 		<button type="button" aria-label="Last page" class="!px-3 !py-1.5 fill-current" disabled><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M470.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 256 265.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160zm-352 160l160-160c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L210.7 256 73.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0z"/></svg><!-- HTML_TAG_END --></button></div></div>
 	
-	</div>
-	</main>
+	</div></main>
 
 			
 			</div>
@@ -133,13 +153,13 @@
 		</div>
 
 	
-	</div>
+	<footer id="shell-footer" class="flex-none "><div class="footer"><h2 class="h2 text-center">This is footer</h2></div></footer></div>
 
 
 			
 			<script>
 				{
-					__sveltekit_1qmkmym = {
+					__sveltekit_1xj5qbe = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -149,8 +169,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.7b49da83.js"),
-						import("./_app/immutable/entry/app.9fa6f474.js")
+						import("./_app/immutable/entry/start.84c7aabb.js"),
+						import("./_app/immutable/entry/app.623e6c9b.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
