--- a/toast.html
+++ b/toast.html
@@ -7,13 +7,13 @@
 		
 		<link href="./_app/immutable/assets/0.e4839273.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/ProgressBar.4f1e9ba5.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.84c7aabb.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.747fe18f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.b93e583a.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.e41477d8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.2ad5cd51.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.6f0a9f36.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.502b9be9.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.623e6c9b.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.4ad91935.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.3ff898fe.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.8ab63f22.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.362c70b9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/ProgressBar.svelte_svelte_type_style_lang.494949d3.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.ce239612.js"><!-- HEAD_svelte-gewkj4_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialClassState() {
   const elemHtmlClasses = document.documentElement.classList;
@@ -77,7 +77,7 @@
 			
 			<script>
 				{
-					__sveltekit_1xj5qbe = {
+					__sveltekit_w0gse4 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -87,8 +87,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.84c7aabb.js"),
-						import("./_app/immutable/entry/app.623e6c9b.js")
+						import("./_app/immutable/entry/start.747fe18f.js"),
+						import("./_app/immutable/entry/app.8ab63f22.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
