--- a/card.html
+++ b/card.html
@@ -15,7 +15,7 @@
 		<link rel="modulepreload" href="./_app/immutable/entry/app.9a7479b5.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.c6c45b96.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/ProgressBar.svelte_svelte_type_style_lang.3f221a79.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/5.e5bf09a3.js"><!-- HEAD_svelte-gewkj4_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialClassState() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.ff29e499.js"><!-- HEAD_svelte-gewkj4_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialClassState() {
   const elemHtmlClasses = document.documentElement.classList;
   const condLocalStorageUserPrefs = localStorage.getItem("modeUserPrefers") === "false";
   const condLocalStorageUserPrefsExists = !("modeUserPrefers" in localStorage);
@@ -59,10 +59,16 @@
 			
 
 			
-			<main id="page-content" class="flex-auto ">
-<div class="container h-full mx-auto flex flex-col justify-center items-center space-y-5"><div class="card variant-ghost-primary p-4 flex justify-center items-center">Hello World!!!</div>
-	<button type="button" class="btn variant-filled">Pop UP!</button>
-	<button type="button" class="btn variant-filled">Clear</button></div></main>
+			<main id="page-content" class="flex-auto "><div class="previewer-viewport p-4 md:p-10 space-y-4 bg-gradient-to-br variant-gradient-primary-secondary "><div class="previewer-preview flex justify-center items-center mx-auto transition-[width] duration-200 w-full "><div class="w-full text-token grid grid-cols-1 md:grid-cols-2 gap-4"><div class="card variant-ghost-primary p-4 flex justify-center items-center"><span>Minimal</span></div>
+			<a class="card variant-ghost-primary card-hover overflow-hidden" href="/"><header><div class="h2 text-center py-2">Header</div></header>
+			<hr class="opacity-50">
+			<section class="p-4 space-y-4"><h6 class="h6">Announcements</h6>
+				<h3 class="h3" data-toc-ignore="">This is Section</h3>
+				<article><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aspernatur provident eveniet eligendi cumque consequatur tempore sint nisi sapiente. Iste beatae laboriosam iure molestias cum expedita architecto itaque quae rem.</p></article></section>
+			<hr class="opacity-50">
+			<footer class="p-4 flex justify-start items-center space-x-4"><figure class="avatar flex aspect-square text-surface-50 font-semibold justify-center items-center overflow-hidden isolate bg-surface-400-500-token w-8 rounded-full" data-testid="avatar"><img src="https://images.unsplash.com/photo-1617296538902-887900d9b592?ixid=M3w0Njc5ODF8MHwxfGFsbHx8fHx8fHx8fDE2ODc5NzExMDB8&ixlib=rb-4.0.3&w=32&h=32&auto=format&fit=crop" alt="" style=""></figure>
+					<div class="flex-auto flex justify-between items-center"><h6 class="font-bold">Footer</h6>
+						<small>On 2023/8/4</small></div></footer></a></div></div></div></main>
 
 			
 			</div>
@@ -91,7 +97,7 @@
 						import("./_app/immutable/entry/app.9a7479b5.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 5],
+							node_ids: [0, 3],
 							data,
 							form: null,
 							error: null
