--- a/table.html
+++ b/table.html
@@ -5,17 +5,17 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.e4839273.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.601ba54e.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/ProgressBar.4f1e9ba5.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.747fe18f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.b93e583a.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.2ad5cd51.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.6f0a9f36.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.3ff898fe.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.8ab63f22.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.362c70b9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/ProgressBar.svelte_svelte_type_style_lang.494949d3.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.b650c2e3.js"><!-- HEAD_svelte-gewkj4_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialClassState() {
+		<link rel="modulepreload" href="./_app/immutable/entry/start.142ff4b0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.39145068.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.33b8338e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.ebc39500.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.cf34c0b3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.9a7479b5.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.c6c45b96.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ProgressBar.svelte_svelte_type_style_lang.3f221a79.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/4.05daf02e.js"><!-- HEAD_svelte-gewkj4_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialClassState() {
   const elemHtmlClasses = document.documentElement.classList;
   const condLocalStorageUserPrefs = localStorage.getItem("modeUserPrefers") === "false";
   const condLocalStorageUserPrefsExists = !("modeUserPrefers" in localStorage);
@@ -50,7 +50,7 @@
 	
 	<div class="flex-auto w-full h-full flex overflow-hidden">
 		<aside id="sidebar-left" class="flex-none overflow-x-hidden overflow-y-auto w-auto"><div id="leftsidebar" class="hidden sm:block"><nav class="list-nav"><ul><li><a href="/">Home</a></li>
-      
+      <li><a href="/card">Card</a></li>
       <li><a href="/table">Table</a></li>
       <li><a href="/toast">Toast</a></li></ul></nav></div></aside>
 
@@ -159,7 +159,7 @@
 			
 			<script>
 				{
-					__sveltekit_w0gse4 = {
+					__sveltekit_zlmq6y = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -169,11 +169,11 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.747fe18f.js"),
-						import("./_app/immutable/entry/app.8ab63f22.js")
+						import("./_app/immutable/entry/start.142ff4b0.js"),
+						import("./_app/immutable/entry/app.9a7479b5.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 3],
+							node_ids: [0, 4],
 							data,
 							form: null,
 							error: null
